--- a/src/components/NotificationsContainer/styles.scss
+++ b/src/components/NotificationsContainer/styles.scss
@@ -1,33 +1,31 @@
 @import '../../styles/variables';
 
-$notification-max-width: 350px;
-
 @mixin notification-animation($direction) {
     .notification {
-        position:   relative;
-        #{$direction}:      0;
-        transition: opacity .4s, #{$direction} .4s;
+        position:      relative;
+        #{$direction}: 0;
+        transition:    opacity .4s, #{$direction} .4s;
         // Animations
         // enter animation (start)
         &-enter {
-            opacity: 0.01;
-            #{$direction}:   -#{$notification-max-width};
+            opacity:       0.01;
+            #{$direction}: -#{$notification-max-width};
 
             // enter animation (end)
             &.notification-enter-active {
-                #{$direction}:   0;
-                opacity: 1;
+                #{$direction}: 0;
+                opacity:       1;
             }
         }
         // leave animation (start)
         &-leave {
-            opacity: 1;
-            #{$direction}:   0;
+            opacity:       1;
+            #{$direction}: 0;
 
             // leave animation (end)
             &.notification-leave-active {
-                opacity: 0.01;
-                #{$direction}:   -#{$notification-max-width};
+                opacity:       0.01;
+                #{$direction}: -#{$notification-max-width};
             }
 
         }
@@ -77,6 +75,7 @@ $notification-max-width: 350px;
         }
     }
 }
+
 // Animation : slide top to bottom for extra small screens
 @media (max-width: #{$screen-xs-max}) {
     .notification {
